# irb120_ros2

./: .gitignore  README.md
irb120_abb_hardware_interface/: CMakeLists.txt  abb_hardware_interface.xml  package.xml
irb120_abb_hardware_interface/src/: abb_hardware_interface.cpp
irb120_control/: CLAUDE_README_FOR_PROBLEM_STATEMENT.md  README.md  force_watcher.py  package.xml  setup.cfg  setup.py
irb120_control/config/: irb120_controllers.yaml
irb120_control/handeye_calibrations/: cam_tf_12mm.launch.py  joints_20_14mm.yaml
irb120_control/irb120_control/: arc_squash_pull.py  camera_hull_recorder.py  egm_handler.py  force_controller.py  keyboard_jog.py  netft_preprocessor.py  object_params.json  pose_goal_moveit.py  post-processing.py  push.py  run_handeye_calibration_poses.py  safe_stop.py  servo_command_publisher.py  squash_pull.py  test_motion.py
irb120_control/irb120_control/controllers/: cartesian_move.py  force_controller.py  moveit_single_shot.py  servo_command_publisher.py
irb120_control/irb120_control/estimation/: com_estimation.py  estimate_params (Copy).py  estimate_params.py  fbd_plot.py  plotting_helper.py  temp.py  temp_add_object_angles.py  tst.py
irb120_control/irb120_control/monitoring/: camera_hull_recorder.py  netft_preprocessor.py
irb120_control/irb120_control/util/: egm_client.py  egm_handler.py  runtime_log_dir.py
irb120_control/launch/: abb_control.launch.py  abb_rws.launch.py  bringup_irb120.launch.py  bringup_irb120_handeye.launch.py  bringup_irb120_moveit.launch.py  bringup_irb120_vel.launch.py  bringup_stack.launch.py  velocity_ctrl_irb120.launch.py  view_robot.launch.py
irb120_control/scripts/: preflight_cleanup.sh
irb120_control/urdf/: irb120_3_58.ros2_control.xacro  irb120_3_58.xacro  irb120_3_58_macro.xacro  irb120_with_finger.xacro
irb120_handeye/: package.xml  setup.cfg  setup.py
irb120_handeye/irb120_handeye/: run_calibration_poses.py
irb120_handeye/launch/: bringup_handeye.launch.py  cam_tf_12mm.launch.py
irb120_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
irb120_moveit_config/config/: irb120.srdf.xacro  irb120_handeye.srdf.xacro  irb120_handeye_macro.srdf.xacro  irb120_macro.srdf.xacro  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  servo.yaml
irb120_moveit_config/rviz/: moveit.rviz  moveit_debug_perception.rviz  moveit_handeye.rviz
irb120_perception/: README.md  package.xml  setup.cfg  setup.py
irb120_perception/irb120_perception/: object_detector.py  perception_debugger.py  robot_mask_filter.py
irb120_perception/launch/: perception.launch.py
