<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>irb120_handeye</name>
  <version>0.0.0</version>
  <description>Hand-eye calibration tools for the IRB120.</description>
  <maintainer email="stevenhyland1@gmail.com">hylander2126</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>control_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>ament_index_python</depend>

  <!-- Robot bringup and MoveIt -->
  <depend>irb120_control</depend>
  <depend>irb120_moveit_config</depend>
  <depend>moveit_configs_utils</depend>
  <depend>moveit_ros_move_group</depend>

  <!-- Camera -->
  <depend>realsense2_camera</depend>
  <depend>tf2_ros</depend>
  <depend>rviz2</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
